# DS-Copper-modelling-ML

./: .gitignore  README.md  Regression_task.ipynb  pyproject.toml
pages/: Model-Training-Page.py
