
[tool.poetry]
name = "Copper Set Modelling"
version = "0.1.0"
description = "To describe Copper Set Modelling insights for Maching Learning Task"
license = "MIT"
authors = ["Navaneethan <naveenkrishnan840@gmail.com>"]
maintainers = ["Navaneethan naveenkrishnan840@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "1.5.1"
xgboost = "2.1.1"
pandas = "2.2.2"
matplotlib = "3.9.2"
seaborn = "0.13.2"
plotly = "5.24.0"
python-dotenv = "^0.21.0"
